<resources>
    <string name="app_name">BlogFrog</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_title">Sign Up</string>
    <string name="welcome_bac">
        Welcome \nBack!
    </string>

    <string name="create_acc">
        Create \nAccount
    </string>

    <string name="login_title">Continue    ></string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="log_in_button">Log in</string>
    <string name="create_post">Create post</string>
    <string name="title">Title</string>
    <string name="title_your_post">Title your post!</string>
    <string name="description">Description</string>
    <string name="post_desc">Write your post description here!</string>
    <string name="mood">Mood</string>
    <string name="post">Post</string>
    <string name="temp">temp</string>
    <string name="save">save</string>
</resources>